--- a/bank_credit_risk_classification.ipynb
+++ b/bank_credit_risk_classification.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "Summary :\n",
     "\n",
-    "* It can be concluded that the **Random Forest Classifier** model is more reliable with **f1 score : 96.21%%** on the test data compared to other models. The model is reliable because **fewer errors** predict credit risk which is **actually high risk and low risk**.\n",
+    "* It can be concluded that the **Random Forest Classifier** model is more reliable with **f1 score : 96.21%** on the test data compared to other models. The model is reliable because **fewer errors** predict credit risk which is **actually high risk and low risk**.\n",
     "\n",
     "* As an alternative, **Deep Neural Network** model has **f1 score : 93.02%** on the test data."
    ]
@@ -3964,14 +3964,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* It can be concluded that the **Random Forest Classifier** model is more reliable with **f1 score : 96.21%%** on the test data compared to other models. The model is reliable because **fewer errors** predict credit risk which is **actually high risk and low risk**.\n",
+    "* It can be concluded that the **Random Forest Classifier** model is more reliable with **f1 score : 96.21%** on the test data compared to other models. The model is reliable because **fewer errors** predict credit risk which is **actually high risk and low risk**.\n",
     "\n",
     "* As an alternative, **Deep Neural Network** model has **f1 score : 93.02%** on the test data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +3979,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook bank_credit_risk_classification.ipynb to PDFviaHTML\n",
-      "[NbConvertApp] Writing 1952908 bytes to bank_credit_risk_classification.pdf\n"
+      "[NbConvertApp] Writing 1952885 bytes to bank_credit_risk_classification.pdf\n"
      ]
     }
    ],
